WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193800
[JSC] ErrorConstructor should not have own IsoSubspace
https://bugs.webkit.org/show_bug.cgi?id=193800
Summary
[JSC] ErrorConstructor should not have own IsoSubspace
Yusuke Suzuki
Reported
2019-01-24 16:39:26 PST
We can put stackTraceLimit information in JSGlobalObject instead.
Attachments
Patch
(14.53 KB, patch)
2019-01-24 17:33 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(14.53 KB, patch)
2019-01-24 17:35 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(16.98 KB, patch)
2019-01-24 18:38 PST
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-01-24 17:33:13 PST
Created
attachment 360061
[details]
Patch
Yusuke Suzuki
Comment 2
2019-01-24 17:35:05 PST
Created
attachment 360062
[details]
Patch
Yusuke Suzuki
Comment 3
2019-01-24 18:34:32 PST
Comment on
attachment 360062
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=360062&action=review
> Source/JavaScriptCore/runtime/ErrorConstructor.cpp:44 > // ECMA 15.11.3.1 Error.prototype
I'll soon move callErrorConstructor and constructWithErrorConstructor from Interpreter to this file.
Yusuke Suzuki
Comment 4
2019-01-24 18:38:59 PST
Created
attachment 360066
[details]
Patch
Yusuke Suzuki
Comment 5
2019-01-24 18:48:03 PST
Committed
r240465
: <
https://trac.webkit.org/changeset/240465
>
Radar WebKit Bug Importer
Comment 6
2019-01-24 18:49:28 PST
<
rdar://problem/47537242
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug